- autosmelt and onhit improvements